--- a/Assets/.editorconfig
+++ b/Assets/.editorconfig
@@ -31,7 +31,7 @@ dotnet_style_predefined_type_for_locals_parameters_members = true:error
 dotnet_style_predefined_type_for_member_access = true:error
 
 # Parentheses preferences
-dotnet_style_parentheses_in_arithmetic_binary_operators = never_if_unnecessary:error
+#dotnet_style_parentheses_in_arithmetic_binary_operators = never_if_unnecessary:error
 dotnet_style_parentheses_in_other_binary_operators = never_if_unnecessary:error
 dotnet_style_parentheses_in_other_operators = never_if_unnecessary:error
 dotnet_style_parentheses_in_relational_binary_operators = never_if_unnecessary:error
